// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/SqlExecWorkflow/Detail/WorkflowHistorySteps render snap when list is empty 1`] = `
<body>
  <div>
    <div
      class="css-vzbzkc"
    >
      <div
        class="history-steps-trigger-wrapper"
      >
        <span>
          工单操作历史
        </span>
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
            fill="#C3C6CD"
          />
        </svg>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/SqlExecWorkflow/Detail/WorkflowHistorySteps render when list is arr 1`] = `
<body>
  <div>
    <div
      class="css-vzbzkc"
    >
      <div
        class="history-steps-trigger-wrapper"
      >
        <span>
          工单操作历史
        </span>
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
            fill="#C3C6CD"
          />
        </svg>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/SqlExecWorkflow/Detail/WorkflowHistorySteps render when list is arr 2`] = `
<body>
  <div>
    <div
      class="css-vzbzkc"
    >
      <div
        class="history-steps-trigger-wrapper"
      >
        <span>
          工单操作历史
        </span>
        <svg
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m8 7.219-3.3 3.3-.942-.943L8 5.333l4.243 4.243-.943.943z"
            fill="#C3C6CD"
          />
        </svg>
      </div>
      <div
        class="custom-steps-wrapper"
      >
        <div
          class="custom-steps-wrapper-title"
        >
          工单进度
        </div>
        <div
          class="ant-steps ant-steps-vertical css-1epey7k css-dev-only-do-not-override-txh9fw"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/SqlExecWorkflow/Detail/WorkflowHistorySteps render when list is arr 3`] = `
<body>
  <div>
    <div
      class="css-vzbzkc"
    >
      <div
        class="history-steps-trigger-wrapper"
      >
        <span>
          工单操作历史
        </span>
        <svg
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m8 8.781 3.3-3.3.943.943L8 10.667 3.757 6.424l.943-.943z"
            fill="#C3C6CD"
          />
        </svg>
      </div>
    </div>
  </div>
</body>
`;
